--- a/_config.yml
+++ b/_config.yml
@@ -18,7 +18,7 @@ weibo_username:     by21bzhaolei
 github_username:    zhaoxiaolei1993
 #twitter_username:   huxpro
 #facebook_username:  huxpro
-linkedin_username:  Lei-Zhao-id720196137
+linkedin_username:  Lei-Zhao-720196137
 
 
 
