--- a/_config.yml
+++ b/_config.yml
@@ -3,8 +3,8 @@ title: Pirate Blog
 SEOTitle: 赵小雷的航海日志 | 拉夫德尔
 header-img: img/home-bg.jpg
 email: davis82086@gmail.com
-description: "关于程序与设计、黑客与画家 | 黄玄，Web & Mobile Lover，Software Engineer，UX Designer | 这里是 @Hux黄玄 的个人博客，与你一起发现更大的世界。"
-keyword: "黄玄, Hux黄玄, Hux, 鬼栈, huxpro, @huxpro, 黄玄的博客, Hux Blog, 博客, 个人网站, 互联网, Web, JavaScript, 前端, 设计"
+description: "关于程序与设计、黑客与画家 | Web & Mobile Lover，Software Engineer"
+keyword: ""
 url: "https://huangxuan.me"              # your host, for absolute URL
 baseurl: ""                             # for example, '/blog' if your blog hosted on 'host/blog'
 
@@ -14,10 +14,10 @@ future: true
 # SNS settings
 RSS: false
 weibo_username:     by21bzhaolei
-#zhihu_username:     huxpro
+#zhihu_username:     
 github_username:    zhaoxiaolei1993
-#twitter_username:   huxpro
-#facebook_username:  huxpro
+#twitter_username:   
+#facebook_username:  
 linkedin_username:  Lei-Zhao-720196137
 
 
@@ -59,7 +59,12 @@ kramdown:
 
 
 # Disqus settings
-disqus_username: hux
+#disqus_username: zlei
+#Disqus
+disqus:
+  enable: true
+  shortname: zlei #your name
+  count: true
 
 # Netease settings
 netease_comment: false
